.components/3az_new-vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "IsBYOL": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            {
              "Ref": "BYOL"
            },
            ""
          ]
        }
      ]
    },
    "IsNewEIPs": {
      "Fn::Equals": [
        {
          "Ref": "NewEIPs"
        },
        "yes"
      ]
    }
  },
  "Description": "A trio of DiscrimiNAT instances in High Availability with Auto Scaling and Load Balancing",
  "Mappings": {
    "Region2ByolAmi": {
      "af-south-1": {
        "x86": "ami-0492833bb076196e5"
      },
      "ap-east-1": {
        "x86": "ami-0d399616ce70fdd82"
      },
      "ap-east-2": {
        "x86": "ami-032729855852176e7"
      },
      "ap-northeast-1": {
        "x86": "ami-03a47b516875cf95d"
      },
      "ap-northeast-2": {
        "x86": "ami-0db1eb1fe0ac076b2"
      },
      "ap-northeast-3": {
        "x86": "ami-009f4f0bc4f12ed0c"
      },
      "ap-south-1": {
        "x86": "ami-0389c2bcc343c35fd"
      },
      "ap-south-2": {
        "x86": "ami-07320d2dd354b6633"
      },
      "ap-southeast-1": {
        "x86": "ami-06bc812b8be1f871c"
      },
      "ap-southeast-2": {
        "x86": "ami-0c91c64ff3526fb62"
      },
      "ap-southeast-3": {
        "x86": "ami-07351056bea7e2818"
      },
      "ap-southeast-4": {
        "x86": "ami-0002d46457b6aa02e"
      },
      "ap-southeast-5": {
        "x86": "ami-089e2fa404ed2121e"
      },
      "ap-southeast-6": {
        "x86": "ami-0681c307c35c3ce6c"
      },
      "ap-southeast-7": {
        "x86": "ami-0173334ebb2e59617"
      },
      "ca-central-1": {
        "x86": "ami-0721e297fec3b3899"
      },
      "ca-west-1": {
        "x86": "ami-070919546bae0efb7"
      },
      "eu-central-1": {
        "x86": "ami-0daeab0afbbf89363"
      },
      "eu-central-2": {
        "x86": "ami-07fe876568d807032"
      },
      "eu-north-1": {
        "x86": "ami-0dc9cc2b148519287"
      },
      "eu-south-1": {
        "x86": "ami-04fc6393c1ec818c4"
      },
      "eu-south-2": {
        "x86": "ami-0ba9bdbfdae0c6d74"
      },
      "eu-west-1": {
        "x86": "ami-0cc508258ef759ae5"
      },
      "eu-west-2": {
        "x86": "ami-0fc0751a14630d012"
      },
      "eu-west-3": {
        "x86": "ami-0e103c987d117d98d"
      },
      "il-central-1": {
        "x86": "ami-01ba2044dfd5fafba"
      },
      "me-central-1": {
        "x86": "ami-06f6bd4c1fbcc305b"
      },
      "mx-central-1": {
        "x86": "ami-03b19bc28c1f8cb19"
      },
      "sa-east-1": {
        "x86": "ami-05e5a1ff2ff97977c"
      },
      "us-east-1": {
        "x86": "ami-0265e97bb372b0f5a"
      },
      "us-east-2": {
        "x86": "ami-07961fdf951cc25df"
      },
      "us-west-1": {
        "x86": "ami-09c46c4a8adfa90f9"
      },
      "us-west-2": {
        "x86": "ami-05ac1918a0f35ead4"
      }
    },
    "Region2PaygAmi": {
      "af-south-1": {
        "x86": "ami-00da4e448fb1139be"
      },
      "ap-east-1": {
        "x86": "ami-00300ea564ab42c60"
      },
      "ap-east-2": {
        "x86": "ami-0b292f0dc3c16b8da"
      },
      "ap-northeast-1": {
        "x86": "ami-02af421214f83baba"
      },
      "ap-northeast-2": {
        "x86": "ami-03099fd8b73626be7"
      },
      "ap-northeast-3": {
        "x86": "ami-0b9258695ec68e5e9"
      },
      "ap-south-1": {
        "x86": "ami-012f8cda94de165da"
      },
      "ap-south-2": {
        "x86": "ami-0f8a01297e86ccf18"
      },
      "ap-southeast-1": {
        "x86": "ami-02e125796522434c2"
      },
      "ap-southeast-2": {
        "x86": "ami-0934616ef83e96c17"
      },
      "ap-southeast-3": {
        "x86": "ami-0e5f843cfc3c8d017"
      },
      "ap-southeast-4": {
        "x86": "ami-0fcac17362f448dcb"
      },
      "ap-southeast-5": {
        "x86": "ami-0d54ced1ae6594394"
      },
      "ap-southeast-6": {
        "x86": "ami-048567276d5837c2b"
      },
      "ap-southeast-7": {
        "x86": "ami-028cdfe39d58b877e"
      },
      "ca-central-1": {
        "x86": "ami-0a14559f2bb2d1f5f"
      },
      "ca-west-1": {
        "x86": "ami-011d384ac8bfb56d4"
      },
      "eu-central-1": {
        "x86": "ami-09960b92b24e1a437"
      },
      "eu-central-2": {
        "x86": "ami-0abe95a0e5dae2493"
      },
      "eu-north-1": {
        "x86": "ami-0291d576f738f7971"
      },
      "eu-south-1": {
        "x86": "ami-0fef34c87c42761ae"
      },
      "eu-south-2": {
        "x86": "ami-0fc246e5b23f9e343"
      },
      "eu-west-1": {
        "x86": "ami-0b0f3810af0367a80"
      },
      "eu-west-2": {
        "x86": "ami-00359d0662156dcb2"
      },
      "eu-west-3": {
        "x86": "ami-0a608597011655a22"
      },
      "il-central-1": {
        "x86": "ami-09aedeb2bb37fabb7"
      },
      "me-central-1": {
        "x86": "ami-068090c04a39585ba"
      },
      "mx-central-1": {
        "x86": "ami-086b4b1ad6fecd579"
      },
      "sa-east-1": {
        "x86": "ami-0848cbeb747bc8d0e"
      },
      "us-east-1": {
        "x86": "ami-017fbdb35699d0578"
      },
      "us-east-2": {
        "x86": "ami-0d22a94c8b70b394d"
      },
      "us-west-1": {
        "x86": "ami-0021dd379613f0eae"
      },
      "us-west-2": {
        "x86": "ami-040d3a8ac897a8411"
      }
    }
  },
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "OPTIONAL Example VPC Network Configuration"
          },
          "Parameters": [
            "NewEIPs",
            "VpcCidr",
            "PrivateSubnetAZ1",
            "PrivateSubnetAZ2",
            "PrivateSubnetAZ3",
            "PublicSubnetAZ1",
            "PublicSubnetAZ2",
            "PublicSubnetAZ3"
          ]
        },
        {
          "Label": {
            "default": "OPTIONAL DiscrimiNAT Advanced Configuration"
          },
          "Parameters": [
            "InstanceType",
            "BYOL"
          ]
        }
      ]
    }
  },
  "Outputs": {
    "DiscrimiNATLoadBalancerEndpointAZ1": {
      "Description": "Set the default route to this in the routing table for PrivateSubnetAZ1",
      "Export": {
        "Name": "DiscrimiNATVPCEndpoint1"
      },
      "Value": {
        "Fn::GetAtt": [
          "DiscrimiNATVPCEndpoint1",
          "Id"
        ]
      }
    },
    "DiscrimiNATLoadBalancerEndpointAZ2": {
      "Description": "Set the default route to this in the routing table for PrivateSubnetAZ2",
      "Export": {
        "Name": "DiscrimiNATVPCEndpoint2"
      },
      "Value": {
        "Fn::GetAtt": [
          "DiscrimiNATVPCEndpoint2",
          "Id"
        ]
      }
    },
    "DiscrimiNATLoadBalancerEndpointAZ3": {
      "Description": "Set the default route to this in the routing table for PrivateSubnetAZ3",
      "Export": {
        "Name": "DiscrimiNATVPCEndpoint3"
      },
      "Value": {
        "Fn::GetAtt": [
          "DiscrimiNATVPCEndpoint3",
          "Id"
        ]
      }
    }
  },
  "Parameters": {
    "BYOL": {
      "Description": "Supply the licence key, if generated by Chaser Systems for you, here",
      "NoEcho": true,
      "Type": "String"
    },
    "InstanceType": {
      "AllowedValues": [
        "t3.small",
        "c6i.large",
        "c6i.xlarge",
        "c6a.large",
        "c6a.xlarge"
      ],
      "Default": "t3.small",
      "Description": "The default of `t3.small` should suffice for light to medium levels of usage. Anything less than 2 CPU cores and 2 GB of RAM is not recommended. For performance testing, faster access to the Internet or for accounts with a large number of VMs (ENIs, rather), you may want to choose a machine type with dedicated CPU cores. Valid values are `t3.small` , `c6i.large` , `c6i.xlarge` , `c6a.large` and `c6a.xlarge`",
      "Type": "String"
    },
    "NewEIPs": {
      "AllowedValues": [
        "yes",
        "no"
      ],
      "Default": "yes",
      "Description": "Allocate new Elastic IPs for NAT outbound. Select `no` if you want to use previously allocated EIPs",
      "Type": "String"
    },
    "PrivateSubnetAZ1": {
      "AllowedPattern": "^\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/\\d{1,2}$",
      "ConstraintDescription": "Must be in CIDR Notation, for example 10.0.0.0/16, 172.16.0.0/16, 192.168.0.0/24",
      "Default": "10.10.0.0/23",
      "Description": "The Private Subnet for Availability Zone 1. If going with the example layout, try 10.10.0.0/23",
      "Type": "String"
    },
    "PrivateSubnetAZ2": {
      "AllowedPattern": "^\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/\\d{1,2}$",
      "ConstraintDescription": "Must be in CIDR Notation, for example 10.0.0.0/16, 172.16.0.0/16, 192.168.0.0/24",
      "Default": "10.10.2.0/23",
      "Description": "The Private Subnet for Availability Zone 2. If going with the example layout, try 10.10.2.0/23",
      "Type": "String"
    },
    "PrivateSubnetAZ3": {
      "AllowedPattern": "^\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/\\d{1,2}$",
      "ConstraintDescription": "Must be in CIDR Notation, for example 10.0.0.0/16, 172.16.0.0/16, 192.168.0.0/24",
      "Default": "10.10.4.0/23",
      "Description": "The Private Subnet for Availability Zone 3. If going with the example layout, try 10.10.4.0/23",
      "Type": "String"
    },
    "PublicSubnetAZ1": {
      "AllowedPattern": "^\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/\\d{1,2}$",
      "ConstraintDescription": "Must be in CIDR Notation, for example 10.0.0.0/16, 172.16.0.0/16, 192.168.0.0/24",
      "Default": "10.10.10.0/24",
      "Description": "The Public Subnet for Availability Zone 1. If going with the example layout, try 10.10.10.0/24",
      "Type": "String"
    },
    "PublicSubnetAZ2": {
      "AllowedPattern": "^\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/\\d{1,2}$",
      "ConstraintDescription": "Must be in CIDR Notation, for example 10.0.0.0/16, 172.16.0.0/16, 192.168.0.0/24",
      "Default": "10.10.11.0/24",
      "Description": "The Public Subnet for Availability Zone 2. If going with the example layout, try 10.10.11.0/24",
      "Type": "String"
    },
    "PublicSubnetAZ3": {
      "AllowedPattern": "^\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/\\d{1,2}$",
      "ConstraintDescription": "Must be in CIDR Notation, for example 10.0.0.0/16, 172.16.0.0/16, 192.168.0.0/24",
      "Default": "10.10.12.0/24",
      "Description": "The Public Subnet for Availability Zone 3. If going with the example layout, try 10.10.12.0/24",
      "Type": "String"
    },
    "VpcCidr": {
      "AllowedPattern": "^\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/\\d{1,2}$",
      "ConstraintDescription": "Must be in CIDR Notation, for example 10.0.0.0/16, 172.16.0.0/16, 192.168.0.0/24",
      "Default": "10.10.0.0/20",
      "Description": "The VPC-level CIDR block to deploy in this region. If going with the example layout, try 10.10.0.0/20",
      "Type": "String"
    }
  },
  "Resources": {
    "DiscrimiNATAutoScalingGroup": {
      "Properties": {
        "AutoScalingGroupName": {
          "Fn::Sub": "DiscrimiNAT-${AWS::StackName}"
        },
        "Cooldown": "1",
        "DesiredCapacity": "3",
        "HealthCheckGracePeriod": 0,
        "HealthCheckType": "ELB",
        "LaunchTemplate": {
          "LaunchTemplateId": {
            "Ref": "DiscrimiNATLaunchTemplate"
          },
          "Version": {
            "Fn::GetAtt": [
              "DiscrimiNATLaunchTemplate",
              "LatestVersionNumber"
            ]
          }
        },
        "MaxSize": "4",
        "MetricsCollection": [
          {
            "Granularity": "1Minute",
            "Metrics": [
              "GroupInServiceInstances",
              "GroupPendingInstances",
              "GroupStandbyInstances",
              "GroupTerminatingInstances",
              "GroupTotalInstances"
            ]
          }
        ],
        "MinSize": "3",
        "Tags": [
          {
            "Key": "Name",
            "PropagateAtLaunch": true,
            "Value": {
              "Fn::Sub": "DiscrimiNAT-${AWS::StackName}"
            }
          }
        ],
        "TargetGroupARNs": [
          {
            "Ref": "DiscrimiNATTargetGroup"
          }
        ],
        "TerminationPolicies": [
          "OldestInstance"
        ],
        "VPCZoneIdentifier": [
          {
            "Ref": "SubnetPublic1"
          },
          {
            "Ref": "SubnetPublic2"
          },
          {
            "Ref": "SubnetPublic3"
          }
        ]
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "UpdatePolicy": {
        "AutoScalingRollingUpdate": {
          "MinActiveInstancesPercent": 50
        }
      }
    },
    "DiscrimiNATAutoScalingLifecycleHook": {
      "Properties": {
        "AutoScalingGroupName": {
          "Ref": "DiscrimiNATAutoScalingGroup"
        },
        "DefaultResult": "CONTINUE",
        "HeartbeatTimeout": 330,
        "LifecycleHookName": "wait-for-drain-and-warmup",
        "LifecycleTransition": "autoscaling:EC2_INSTANCE_LAUNCHING"
      },
      "Type": "AWS::AutoScaling::LifecycleHook"
    },
    "DiscrimiNATAutoScalingPolicy": {
      "Properties": {
        "AutoScalingGroupName": {
          "Ref": "DiscrimiNATAutoScalingGroup"
        },
        "Cooldown": "0",
        "EstimatedInstanceWarmup": 330,
        "PolicyType": "TargetTrackingScaling",
        "TargetTrackingConfiguration": {
          "DisableScaleIn": false,
          "PredefinedMetricSpecification": {
            "PredefinedMetricType": "ASGAverageCPUUtilization"
          },
          "TargetValue": 50
        }
      },
      "Type": "AWS::AutoScaling::ScalingPolicy"
    },
    "DiscrimiNATIAMInstanceProfile": {
      "Properties": {
        "InstanceProfileName": {
          "Fn::Sub": "DiscrimiNAT-${AWS::StackName}"
        },
        "Roles": [
          {
            "Ref": "DiscrimiNATIAMRole"
          }
        ]
      },
      "Type": "AWS::IAM::InstanceProfile"
    },
    "DiscrimiNATIAMPolicy": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
                "logs:DescribeLogStreams"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:logs:*:*:log-group:DiscrimiNAT:log-stream:*"
              ]
            },
            {
              "Action": [
                "ec2:DescribeNetworkInterfaces",
                "ec2:DescribeSecurityGroups",
                "ec2:DescribeAddresses"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "ssm:GetParameter"
              ],
              "Effect": "Allow",
              "Resource": [
                "arn:aws:ssm:*:*:parameter/DiscrimiNAT*"
              ]
            },
            {
              "Action": [
                "ec2:ModifyInstanceAttribute",
                "ec2:AssociateAddress"
              ],
              "Condition": {
                "Null": {
                  "aws:ResourceTag/discriminat": false
                }
              },
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": {
          "Fn::Sub": "DiscrimiNAT-${AWS::StackName}"
        },
        "Roles": [
          {
            "Ref": "DiscrimiNATIAMRole"
          }
        ]
      },
      "Type": "AWS::IAM::Policy"
    },
    "DiscrimiNATIAMRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole"
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "RoleName": {
          "Fn::Sub": "DiscrimiNAT-${AWS::StackName}"
        }
      },
      "Type": "AWS::IAM::Role"
    },
    "DiscrimiNATLaunchTemplate": {
      "Properties": {
        "LaunchTemplateData": {
          "BlockDeviceMappings": [
            {
              "DeviceName": "/dev/xvda",
              "Ebs": {
                "Encrypted": true,
                "Iops": 3000,
                "VolumeSize": "35",
                "VolumeType": "gp3"
              }
            }
          ],
          "IamInstanceProfile": {
            "Arn": {
              "Fn::GetAtt": [
                "DiscrimiNATIAMInstanceProfile",
                "Arn"
              ]
            }
          },
          "ImageId": {
            "Fn::If": [
              "IsBYOL",
              {
                "Fn::FindInMap": [
                  "Region2ByolAmi",
                  {
                    "Ref": "AWS::Region"
                  },
                  "x86"
                ]
              },
              {
                "Fn::FindInMap": [
                  "Region2PaygAmi",
                  {
                    "Ref": "AWS::Region"
                  },
                  "x86"
                ]
              }
            ]
          },
          "InstanceType": {
            "Ref": "InstanceType"
          },
          "MetadataOptions": {
            "HttpEndpoint": "enabled",
            "HttpTokens": "required",
            "InstanceMetadataTags": "enabled"
          },
          "Monitoring": {
            "Enabled": true
          },
          "NetworkInterfaces": [
            {
              "AssociatePublicIpAddress": false,
              "DeviceIndex": "0",
              "Groups": [
                {
                  "Ref": "DiscrimiNATSecurityGroup"
                }
              ]
            }
          ],
          "TagSpecifications": [
            {
              "ResourceType": "instance",
              "Tags": [
                {
                  "Key": "discriminat",
                  "Value": "%default"
                }
              ]
            },
            {
              "ResourceType": "network-interface",
              "Tags": [
                {
                  "Key": "discriminat",
                  "Value": "%default"
                }
              ]
            },
            {
              "ResourceType": "volume",
              "Tags": [
                {
                  "Key": "discriminat",
                  "Value": "%default"
                }
              ]
            }
          ],
          "UserData": {
            "Fn::If": [
              "IsBYOL",
              {
                "Fn::Base64": {
                  "Fn::Sub": "#cloud-config\nwrite_files:\n- encoding: base64\n  path: /etc/chaser/licence-key.der\n  permissions: 0404\n  content: ${BYOL}\n"
                }
              },
              {
                "Ref": "AWS::NoValue"
              }
            ]
          }
        },
        "LaunchTemplateName": {
          "Fn::Sub": "DiscrimiNAT-${AWS::StackName}"
        }
      },
      "Type": "AWS::EC2::LaunchTemplate"
    },
    "DiscrimiNATListener": {
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "DiscrimiNATTargetGroup"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "DiscrimiNATLoadBalancer"
        }
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener"
    },
    "DiscrimiNATLoadBalancer": {
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "load_balancing.cross_zone.enabled",
            "Value": "true"
          }
        ],
        "Subnets": [
          {
            "Ref": "SubnetPrivate1"
          },
          {
            "Ref": "SubnetPrivate2"
          },
          {
            "Ref": "SubnetPrivate3"
          }
        ],
        "Type": "gateway"
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer"
    },
    "DiscrimiNATPreferences": {
      "Properties": {
        "Name": "DiscrimiNAT",
        "Tier": "Standard",
        "Type": "String",
        "Value": "{\n  \"%default\": {\n    \"wildcard_exposure\": \"prohibit_public_suffix\",\n    \"flow_log_verbosity\": \"full\",\n    \"see_thru\": null,\n    \"x509_crls\": \"ignore\"\n  }\n}\n"
      },
      "Type": "AWS::SSM::Parameter"
    },
    "DiscrimiNATRouteAssociation1": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable1"
        },
        "SubnetId": {
          "Ref": "SubnetPrivate1"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "DiscrimiNATRouteAssociation2": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable2"
        },
        "SubnetId": {
          "Ref": "SubnetPrivate2"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "DiscrimiNATRouteAssociation3": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable3"
        },
        "SubnetId": {
          "Ref": "SubnetPrivate3"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "DiscrimiNATSecurityGroup": {
      "Properties": {
        "GroupDescription": "for DiscrimiNAT itself only",
        "GroupName": {
          "Fn::Sub": "DiscrimiNAT-${AWS::StackName}"
        },
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "DiscrimiNAT Firewall itself to internet forwarding on behalf of other hosts",
            "FromPort": 0,
            "IpProtocol": "-1",
            "ToPort": 0
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Ref": "VpcCidr"
            },
            "Description": "internet-bound TCP connections from any host in the VPC",
            "FromPort": 0,
            "IpProtocol": "tcp",
            "ToPort": 65535
          },
          {
            "CidrIp": {
              "Ref": "VpcCidr"
            },
            "Description": "health check service",
            "FromPort": 1042,
            "IpProtocol": "tcp",
            "ToPort": 1042
          },
          {
            "CidrIp": {
              "Ref": "VpcCidr"
            },
            "Description": "GENEVE encapsulation receive port from GWLB",
            "FromPort": 6081,
            "IpProtocol": "udp",
            "ToPort": 6081
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "DiscrimiNAT-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "DiscrimiNATTargetGroup": {
      "Properties": {
        "HealthCheckEnabled": true,
        "HealthCheckIntervalSeconds": 5,
        "HealthCheckPort": "1042",
        "HealthCheckTimeoutSeconds": 2,
        "HealthyThresholdCount": 2,
        "Port": 6081,
        "Protocol": "GENEVE",
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": 150
          },
          {
            "Key": "target_failover.on_deregistration",
            "Value": "no_rebalance"
          },
          {
            "Key": "target_failover.on_unhealthy",
            "Value": "no_rebalance"
          }
        ],
        "UnhealthyThresholdCount": 2,
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup"
    },
    "DiscrimiNATVPCEndpoint1": {
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.vpce.",
              {
                "Ref": "AWS::Region"
              },
              ".",
              {
                "Ref": "DiscrimiNATVPCEndpointService"
              }
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "SubnetPrivate1"
          }
        ],
        "VpcEndpointType": "GatewayLoadBalancer",
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::VPCEndpoint"
    },
    "DiscrimiNATVPCEndpoint2": {
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.vpce.",
              {
                "Ref": "AWS::Region"
              },
              ".",
              {
                "Ref": "DiscrimiNATVPCEndpointService"
              }
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "SubnetPrivate2"
          }
        ],
        "VpcEndpointType": "GatewayLoadBalancer",
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::VPCEndpoint"
    },
    "DiscrimiNATVPCEndpoint3": {
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.vpce.",
              {
                "Ref": "AWS::Region"
              },
              ".",
              {
                "Ref": "DiscrimiNATVPCEndpointService"
              }
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "SubnetPrivate3"
          }
        ],
        "VpcEndpointType": "GatewayLoadBalancer",
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::VPCEndpoint"
    },
    "DiscrimiNATVPCEndpointService": {
      "Properties": {
        "AcceptanceRequired": false,
        "GatewayLoadBalancerArns": [
          {
            "Ref": "DiscrimiNATLoadBalancer"
          }
        ]
      },
      "Type": "AWS::EC2::VPCEndpointService"
    },
    "DiscrimiNATsSyncIngressRule": {
      "Properties": {
        "Description": "DiscrimiNATs sync",
        "FromPort": 1042,
        "GroupId": {
          "Ref": "DiscrimiNATSecurityGroup"
        },
        "IpProtocol": "udp",
        "SourceSecurityGroupId": {
          "Ref": "DiscrimiNATSecurityGroup"
        },
        "ToPort": 1042
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "EC2VPCEndpoint": {
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Ref": "VPCEndpointEC2SecurityGroup"
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "SubnetPrivate1"
          },
          {
            "Ref": "SubnetPrivate2"
          },
          {
            "Ref": "SubnetPrivate3"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::VPCEndpoint"
    },
    "EIP1": {
      "Condition": "IsNewEIPs",
      "Properties": {
        "Tags": [
          {
            "Key": "discriminat",
            "Value": "some-comment"
          },
          {
            "Key": "Name",
            "Value": "egress-ip-reserved"
          }
        ]
      },
      "Type": "AWS::EC2::EIP"
    },
    "EIP2": {
      "Condition": "IsNewEIPs",
      "Properties": {
        "Tags": [
          {
            "Key": "discriminat",
            "Value": "some-comment"
          },
          {
            "Key": "Name",
            "Value": "egress-ip-reserved"
          }
        ]
      },
      "Type": "AWS::EC2::EIP"
    },
    "EIP3": {
      "Condition": "IsNewEIPs",
      "Properties": {
        "Tags": [
          {
            "Key": "discriminat",
            "Value": "some-comment"
          },
          {
            "Key": "Name",
            "Value": "egress-ip-reserved"
          }
        ]
      },
      "Type": "AWS::EC2::EIP"
    },
    "EIP4": {
      "Condition": "IsNewEIPs",
      "Properties": {
        "Tags": [
          {
            "Key": "discriminat",
            "Value": "some-comment"
          },
          {
            "Key": "Name",
            "Value": "egress-ip-reserved"
          }
        ]
      },
      "Type": "AWS::EC2::EIP"
    },
    "InternetGateway": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "InternetGateway-${AWS::StackName}"
            }
          }
        ]
      },
      "Type": "AWS::EC2::InternetGateway"
    },
    "InternetGatewayAttachment": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        },
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::VPCGatewayAttachment"
    },
    "InternetGatewayRouteAssociation1": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "SubnetPublic1"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "InternetGatewayRouteAssociation2": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "SubnetPublic2"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "InternetGatewayRouteAssociation3": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "SubnetPublic3"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "PrivateRouteTable1": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Private1-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "PrivateRouteTable2": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Private2-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "PrivateRouteTable3": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Private3-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "PrivateSubnet1DefaultRoute": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PrivateRouteTable1"
        },
        "VpcEndpointId": {
          "Ref": "DiscrimiNATVPCEndpoint1"
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "PrivateSubnet2DefaultRoute": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PrivateRouteTable2"
        },
        "VpcEndpointId": {
          "Ref": "DiscrimiNATVPCEndpoint2"
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "PrivateSubnet3DefaultRoute": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PrivateRouteTable3"
        },
        "VpcEndpointId": {
          "Ref": "DiscrimiNATVPCEndpoint3"
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "PublicRoute": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "PublicRouteTable": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Public-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "SubnetPrivate1": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PrivateSubnetAZ1"
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Private1-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "SubnetPrivate2": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PrivateSubnetAZ2"
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Private2-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "SubnetPrivate3": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "2",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PrivateSubnetAZ3"
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Private3-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "SubnetPublic1": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PublicSubnetAZ1"
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Public1-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "VPC",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "SubnetPublic2": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PublicSubnetAZ2"
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Public2-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "SubnetPublic3": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "2",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PublicSubnetAZ3"
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "Public3-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "VPC": {
      "Properties": {
        "CidrBlock": {
          "Ref": "VpcCidr"
        },
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "VPC-${AWS::StackName}"
            }
          }
        ]
      },
      "Type": "AWS::EC2::VPC"
    },
    "VPCEndpointEC2SecurityGroup": {
      "Properties": {
        "GroupDescription": "ingress from entire VPC to EC2 Endpoint for connectivity to it without Public IPs",
        "GroupName": {
          "Fn::Sub": "VPCE-EC2-${AWS::StackName}"
        },
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Ref": "VpcCidr"
            },
            "Description": "only HTTPS standard port needed for EC2 API",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "VPCE-EC2-${AWS::StackName}"
            }
          }
        ],
        "VpcId": {
          "Fn::GetAtt": [
            "SubnetPublic1",
            "VpcId"
          ]
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    }
  }
}
